// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DocTest:sidebar > basic 1`] = `
"<div class="sidebarblock">
<div class="content">
<div class="paragraph">
<p>AsciiDoc was first released in Nov 2002 by Stuart Rackham.
It was designed from the start to be a shorthand syntax
for producing professional documents like DocBook and LaTeX.</p>
</div>
</div>
</div>"
`;

exports[`DocTest:sidebar > with-id-and-role 1`] = `
"<div id="origin" class="sidebarblock center">
<div class="content">
<div class="paragraph">
<p>AsciiDoc was first released in Nov 2002 by Stuart Rackham.
It was designed from the start to be a shorthand syntax
for producing professional documents like DocBook and LaTeX.</p>
</div>
</div>
</div>"
`;

exports[`DocTest:sidebar > with-title 1`] = `
"<div class="sidebarblock">
<div class="content">
<div class="title">AsciiDoc history</div>
<div class="paragraph">
<p>AsciiDoc was first released in Nov 2002 by Stuart Rackham.
It was designed from the start to be a shorthand syntax
for producing professional documents like DocBook and LaTeX.</p>
</div>
</div>
</div>"
`;
